--- a/projects/coding-components/package.json
+++ b/projects/coding-components/package.json
@@ -1,9 +1,24 @@
 {
   "name": "coding-components",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "peerDependencies": {
-    "@angular/common": "^14.0.0",
-    "@angular/core": "^14.0.0"
+    "@angular/animations": "^14.2.4",
+    "@angular/cdk": "^14.2.3",
+    "@angular/common": "^14.2.4",
+    "@angular/compiler": "^14.2.4",
+    "@angular/core": "^14.2.4",
+    "@angular/elements": "^14.2.4",
+    "@angular/flex-layout": "~14.0.0-beta.40",
+    "@angular/forms": "^14.2.4",
+    "@angular/material": "^14.2.3",
+    "@angular/platform-browser": "^14.2.4",
+    "@angular/platform-browser-dynamic": "^14.2.4",
+    "@angular/router": "^14.2.4",
+    "@iqb/responses": "^0.3.0",
+    "@ngx-translate/core": "^14.0.0",
+    "rxjs": "^7.5.7",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "dependencies": {
     "tslib": "^2.3.0"
