--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "coding-components",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+  "name": "@iqb/coding-components",
+  "version": "0.13.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iqb-berlin/coding-components.git"
   },
-  "private": true,
+  "author": "IQB - Institut zur Qualitätsentwicklung im Bildungswesen",
+  "license": "MIT",
+  "description": "Angular components for verona related assessments: Responses/Coding",
+  "scripts": {
+    "build": "tsc",
+    "prepare-for-npm": "npm run build",
+    "publish-to-npm": "npm publish --access public"
+  },
   "dependencies": {
     "@angular/animations": "^14.2.4",
     "@angular/cdk": "^14.2.3",
@@ -16,12 +20,8 @@
     "@angular/compiler": "^14.2.4",
     "@angular/core": "^14.2.4",
     "@angular/elements": "^14.2.4",
-    "@angular/flex-layout": "~14.0.0-beta.40",
-    "@angular/forms": "^14.2.4",
-    "@angular/material": "^14.2.3",
     "@angular/platform-browser": "^14.2.4",
     "@angular/platform-browser-dynamic": "^14.2.4",
-    "@angular/router": "^14.2.4",
     "@iqb/responses": "^0.3.0",
     "@ngx-translate/core": "^14.0.0",
     "rxjs": "^7.5.7",
@@ -35,7 +35,6 @@
     "@iqb/eslint-config": "^2.1.1",
     "@types/jasmine": "^4.3.0",
     "@types/node": "^18.7.23",
-    "iqb-dev-components": "^1.4.0",
     "jasmine-core": "^4.4.0",
     "karma": "^6.4.1",
     "karma-chrome-launcher": "~3.1.0",
@@ -47,5 +46,11 @@
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
-  }
+  },
+  "main": "dist/public-api.js",
+  "module": "dist/public-api.js",
+  "types": "dist/public-api.d.ts",
+  "files": [
+    "dist/*"
+  ]
 }
