--- a/package.json
+++ b/package.json
@@ -1,56 +1,38 @@
 {
-  "name": "@iqb/coding-components",
-  "version": "0.13.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/iqb-berlin/coding-components.git"
-  },
-  "author": "IQB - Institut zur Qualitätsentwicklung im Bildungswesen",
-  "license": "MIT",
-  "description": "Angular components for verona related assessments: Responses/Coding",
+  "name": "coding-components",
+  "version": "0.0.0",
   "scripts": {
-    "build": "tsc",
-    "prepare-for-npm": "npm run build",
-    "publish-to-npm": "npm publish --access public"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
+  "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.4",
-    "@angular/cdk": "^14.2.3",
-    "@angular/common": "^14.2.4",
-    "@angular/compiler": "^14.2.4",
-    "@angular/core": "^14.2.4",
-    "@angular/elements": "^14.2.4",
-    "@angular/platform-browser": "^14.2.4",
-    "@angular/platform-browser-dynamic": "^14.2.4",
-    "@iqb/responses": "^0.3.0",
-    "@ngx-translate/core": "^14.0.0",
-    "rxjs": "^7.5.7",
+    "@angular/animations": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/forms": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
+    "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.4",
-    "@angular/cli": "^14.2.4",
-    "@angular/compiler-cli": "^14.2.4",
-    "@iqb/eslint-config": "^2.1.1",
-    "@types/jasmine": "^4.3.0",
-    "@types/node": "^18.7.23",
-    "jasmine-core": "^4.4.0",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "^2.2.0",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
-    "ng-packagr": "^14.2.1",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
-  },
-  "main": "dist/public-api.js",
-  "module": "dist/public-api.js",
-  "types": "dist/public-api.d.ts",
-  "files": [
-    "dist/*"
-  ]
+    "@angular-devkit/build-angular": "^16.2.1",
+    "@angular/cli": "~16.2.1",
+    "@angular/compiler-cli": "^16.2.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "typescript": "~5.1.3"
+  }
 }
