--- a/package.json
+++ b/package.json
@@ -16,10 +16,35 @@
     "@angular/core": "^16.2.0",
     "@angular/elements": "^16.2.3",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.4",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@iqb/responses": "^0.6.0",
+    "@tiptap/core": "^2.0.0-beta.199",
+    "@tiptap/extension-blockquote": "^2.0.0-beta.199",
+    "@tiptap/extension-bold": "^2.0.0-beta.199",
+    "@tiptap/extension-bubble-menu": "^2.0.0-beta.199",
+    "@tiptap/extension-bullet-list": "^2.0.0-beta.199",
+    "@tiptap/extension-color": "^2.0.0-beta.199",
+    "@tiptap/extension-document": "^2.0.0-beta.199",
+    "@tiptap/extension-floating-menu": "^2.0.0-beta.199",
+    "@tiptap/extension-font-family": "^2.0.0-beta.199",
+    "@tiptap/extension-heading": "^2.0.0-beta.199",
+    "@tiptap/extension-highlight": "^2.0.0-beta.199",
+    "@tiptap/extension-image": "^2.0.0-beta.199",
+    "@tiptap/extension-italic": "^2.0.0-beta.199",
+    "@tiptap/extension-list-item": "^2.0.0-beta.199",
+    "@tiptap/extension-ordered-list": "^2.0.0-beta.199",
+    "@tiptap/extension-paragraph": "^2.0.0-beta.199",
+    "@tiptap/extension-strike": "~2.0.0-beta.199",
+    "@tiptap/extension-subscript": "^2.0.0-beta.199",
+    "@tiptap/extension-superscript": "^2.0.0-beta.199",
+    "@tiptap/extension-text": "^2.0.0-beta.199",
+    "@tiptap/extension-text-align": "^2.0.0-beta.199",
+    "@tiptap/extension-text-style": "^2.0.0-beta.199",
+    "@tiptap/extension-underline": "^2.0.0-beta.199",
+    "ngx-tiptap": "^9.0.2",
     "ngx-build-plus": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
