--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@iqb/responses": "^0.6.0",
+    "@ngx-translate/core": "^15.0.0",
     "@tiptap/core": "^2.0.0-beta.199",
     "@tiptap/extension-blockquote": "^2.0.0-beta.199",
     "@tiptap/extension-bold": "^2.0.0-beta.199",
