--- a/package.json
+++ b/package.json
@@ -22,29 +22,29 @@
     "@angular/router": "^16.2.0",
     "@iqb/responses": "^0.6.0",
     "@ngx-translate/core": "^15.0.0",
-    "@tiptap/core": "^2.0.0-beta.199",
-    "@tiptap/extension-blockquote": "^2.0.0-beta.199",
-    "@tiptap/extension-bold": "^2.0.0-beta.199",
-    "@tiptap/extension-bubble-menu": "^2.0.0-beta.199",
-    "@tiptap/extension-bullet-list": "^2.0.0-beta.199",
-    "@tiptap/extension-color": "^2.0.0-beta.199",
-    "@tiptap/extension-document": "^2.0.0-beta.199",
-    "@tiptap/extension-floating-menu": "^2.0.0-beta.199",
-    "@tiptap/extension-font-family": "^2.0.0-beta.199",
-    "@tiptap/extension-heading": "^2.0.0-beta.199",
-    "@tiptap/extension-highlight": "^2.0.0-beta.199",
-    "@tiptap/extension-image": "^2.0.0-beta.199",
-    "@tiptap/extension-italic": "^2.0.0-beta.199",
-    "@tiptap/extension-list-item": "^2.0.0-beta.199",
-    "@tiptap/extension-ordered-list": "^2.0.0-beta.199",
-    "@tiptap/extension-paragraph": "^2.0.0-beta.199",
-    "@tiptap/extension-strike": "~2.0.0-beta.199",
-    "@tiptap/extension-subscript": "^2.0.0-beta.199",
-    "@tiptap/extension-superscript": "^2.0.0-beta.199",
-    "@tiptap/extension-text": "^2.0.0-beta.199",
-    "@tiptap/extension-text-align": "^2.0.0-beta.199",
-    "@tiptap/extension-text-style": "^2.0.0-beta.199",
-    "@tiptap/extension-underline": "^2.0.0-beta.199",
+    "@tiptap/core": "^2.1.10",
+    "@tiptap/extension-blockquote": "^2.1.10",
+    "@tiptap/extension-bold": "^2.1.10",
+    "@tiptap/extension-bubble-menu": "^2.1.10",
+    "@tiptap/extension-bullet-list": "^2.1.10",
+    "@tiptap/extension-color": "^2.1.10",
+    "@tiptap/extension-document": "^2.1.10",
+    "@tiptap/extension-floating-menu": "^2.1.10",
+    "@tiptap/extension-font-family": "^2.1.10",
+    "@tiptap/extension-heading": "^2.1.10",
+    "@tiptap/extension-highlight": "^2.1.10",
+    "@tiptap/extension-image": "^2.1.10",
+    "@tiptap/extension-italic": "^2.1.10",
+    "@tiptap/extension-list-item": "^2.1.10",
+    "@tiptap/extension-ordered-list": "^2.1.10",
+    "@tiptap/extension-paragraph": "^2.1.10",
+    "@tiptap/extension-strike": "~2.1.10",
+    "@tiptap/extension-subscript": "^2.1.10",
+    "@tiptap/extension-superscript": "^2.1.10",
+    "@tiptap/extension-text": "^2.1.10",
+    "@tiptap/extension-text-align": "^2.1.10",
+    "@tiptap/extension-text-style": "^2.1.10",
+    "@tiptap/extension-underline": "^2.1.10",
     "ngx-tiptap": "^9.0.2",
     "ngx-build-plus": "^16.0.0",
     "rxjs": "~7.8.0",
