--- a/angular.json
+++ b/angular.json
@@ -110,7 +110,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "src/material-icons.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/assets/material-icons.css",
               "src/assets/customTheme.scss"
             ],
             "scripts": []
