--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "@types/node": "^20.4.4",
+    "ts-node": "^10.9.1"
   }
 }
