--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tiptap/extension-font-family": "^2.1.10",
     "@tiptap/extension-heading": "^2.1.10",
     "@tiptap/extension-highlight": "^2.1.10",
+    "@tiptap/extension-history": "^2.1.10",
     "@tiptap/extension-image": "^2.1.10",
     "@tiptap/extension-italic": "^2.1.10",
     "@tiptap/extension-list-item": "^2.1.10",
