--- a/angular.json
+++ b/angular.json
@@ -134,6 +134,114 @@
           }
         }
       }
+    },
+    "schemer": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        },
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
+      "root": "projects/schemer",
+      "sourceRoot": "projects/schemer/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/schemer",
+            "index": "projects/schemer/src/index.html",
+            "main": "projects/schemer/src/main.ts",
+            "tsConfig": "projects/schemer/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "polyfills": [
+              "zone.js"
+            ],
+            "assets": [
+              "projects/schemer/src/favicon.ico",
+              "projects/schemer/src/assets"
+            ],
+            "styles": [
+              "projects/schemer/src/styles.scss",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "projects/schemer/src/assets/material-icons.css",
+              "projects/schemer/src/assets/customTheme.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "1.5mb",
+                  "maximumError": "3mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "projects/schemer/src/environments/environment.ts",
+                  "with": "projects/schemer/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "schemer:build:production"
+            },
+            "development": {
+              "browserTarget": "schemer:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "schemer:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/schemer/src/test.ts",
+            "tsConfig": "projects/schemer/tsconfig.spec.json",
+            "karmaConfig": "projects/schemer/karma.conf.js",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "projects/schemer/src/favicon.ico",
+              "projects/schemer/src/assets"
+            ],
+            "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "projects/schemer/src/styles.scss"
+            ],
+            "scripts": []
+          }
+        }
+      }
     }
   }
 }
