--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coding-components",
   "config": {
-    "schemer_version": "1.2.0-beta2"
+    "schemer_version": "1.2.0-beta3"
   },
   "scripts": {
     "ng": "ng",
@@ -25,11 +25,53 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "@iqb/responses": "^0.18.0",
+    "@iqb/responses": "^0.19.0",
     "@ngx-translate/core": "^15.0.0",
     "ngx-build-plus": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "zone.js": "~0.13.0"
+  },
+  "peerDependencies": {
+    "@angular/animations": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/elements": "^16.2.3",
+    "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.4",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
+    "@iqb/responses": "^0.19.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@tiptap/core": "^2.1.10",
+    "@tiptap/extension-blockquote": "^2.1.10",
+    "@tiptap/extension-bold": "^2.1.10",
+    "@tiptap/extension-bubble-menu": "^2.1.10",
+    "@tiptap/extension-bullet-list": "^2.1.10",
+    "@tiptap/extension-color": "^2.1.10",
+    "@tiptap/extension-document": "^2.1.10",
+    "@tiptap/extension-floating-menu": "^2.1.10",
+    "@tiptap/extension-font-family": "^2.1.10",
+    "@tiptap/extension-heading": "^2.1.10",
+    "@tiptap/extension-highlight": "^2.1.10",
+    "@tiptap/extension-history": "^2.1.10",
+    "@tiptap/extension-image": "^2.1.10",
+    "@tiptap/extension-italic": "^2.1.10",
+    "@tiptap/extension-list-item": "^2.1.10",
+    "@tiptap/extension-ordered-list": "^2.1.10",
+    "@tiptap/extension-paragraph": "^2.1.10",
+    "@tiptap/extension-strike": "~2.1.10",
+    "@tiptap/extension-subscript": "^2.1.10",
+    "@tiptap/extension-superscript": "^2.1.10",
+    "@tiptap/extension-text": "^2.1.10",
+    "@tiptap/extension-text-align": "^2.1.10",
+    "@tiptap/extension-text-style": "^2.1.10",
+    "@tiptap/extension-underline": "^2.1.10",
+    "ngx-tiptap": "^9.0.2",
+    "ngx-build-plus": "^16.0.0",
+    "rxjs": "~7.8.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
