Add "ngx-coding-components.module.d.ts" to export path of npm package

--- a/projects/ngx-coding-components/package.json
+++ b/projects/ngx-coding-components/package.json
@@ -1,6 +1,10 @@
 {
   "name": "@iqb/ngx-coding-components",
-  "version": "0.1.2",
+  "type": "module",
+  "exports": {
+    "./lib/ngx-coding-components.module": "./lib/ngx-coding-components.module.d.ts"
+  },
+  "version": "0.1.5",
   "author": "IQB - Institut zur Qualitätsentwicklung im Bildungswesen",
   "license": "MIT",
   "description": "Angular components for coding responses in assessments of IQB.",
