--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coding-components",
   "config": {
-    "schemer_version": "1.2.0-beta4"
+    "schemer_version": "1.2.0-rc"
   },
   "scripts": {
     "ng": "ng",
