--- a/package.json
+++ b/package.json
@@ -14,27 +14,26 @@
     "buildAndPack_sc": "npm run build_sc && npm run pack_sc",
     "npm_publish": "cd dist/ngx-coding-components && npm publish --access public"
   },
-  "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
-    "@angular/common": "^17.3.0",
-    "@angular/compiler": "^17.3.0",
-    "@angular/core": "^17.3.0",
-    "@angular/elements": "^17.3.0",
-    "@angular/forms": "^17.3.0",
-    "@angular/material": "^16.2.4",
-    "@angular/platform-browser": "^17.3.0",
-    "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/router": "^17.3.0",
+    "@angular/animations": "^17.1.3",
+    "@angular/common": "^17.1.3",
+    "@angular/compiler": "^17.1.3",
+    "@angular/core": "^17.1.3",
+    "@angular/elements": "^17.1.3",
+    "@angular/forms": "^17.1.3",
+    "@angular/material": "^17.1.2",
+    "@angular/platform-browser": "^17.1.3",
+    "@angular/platform-browser-dynamic": "^17.1.3",
+    "@angular/router": "^17.1.3",
     "@iqb/responses": "^1.0.0",
     "@ngx-translate/core": "^15.0.0",
-    "ngx-build-plus": "^16.0.0",
+    "ngx-build-plus": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.4"
   },
   "peerDependencies": {
-    "@angular/material": "^16.2.4",
+    "@angular/material": "^17.1.2",
     "@iqb/responses": "^1.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@tiptap/core": "^2.1.10",
@@ -54,7 +53,7 @@
     "@tiptap/extension-list-item": "^2.1.10",
     "@tiptap/extension-ordered-list": "^2.1.10",
     "@tiptap/extension-paragraph": "^2.1.10",
-    "@tiptap/extension-strike": "~2.1.10",
+    "@tiptap/extension-strike": "^2.1.10",
     "@tiptap/extension-subscript": "^2.1.10",
     "@tiptap/extension-superscript": "^2.1.10",
     "@tiptap/extension-text": "^2.1.10",
@@ -66,9 +65,8 @@
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.0",
-    "@angular/cli": "~17.3.0",
-    "@angular/compiler-cli": "^17.3.0",
+    "@angular-devkit/build-angular": "^17.1.4",
+    "@angular/cli": "~17.1.3",    "@angular/compiler-cli": "^17.1.3",
     "@types/jasmine": "~4.3.0",
     "iqb-dev-components": "^1.4.1",
     "jasmine-core": "~4.6.0",
@@ -78,7 +76,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.4.2",
-    "ng-packagr": "^17.3.0",
+    "ng-packagr": "^17.1.3",
     "@types/node": "^20.4.4",
     "ts-node": "^10.9.1"
   }
