--- a/projects/ngx-coding-components/package.json
+++ b/projects/ngx-coding-components/package.json
@@ -4,7 +4,7 @@
   "exports": {
     "./lib/ngx-coding-components.module": "./lib/ngx-coding-components.module.d.ts"
   },
-  "version": "1.3.2",
+  "version": "1.4.0",
   "author": "IQB - Institut zur Qualitätsentwicklung im Bildungswesen",
   "license": "MIT",
   "description": "Angular components for coding responses in assessments of IQB.",
@@ -17,16 +17,16 @@
   },
   "homepage": "https://github.com/iqb-berlin/coding-components#readme",
   "peerDependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/elements": "^16.2.3",
-    "@angular/forms": "^16.2.0",
-    "@angular/material": "^16.2.4",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
+    "@angular/animations": "^17.1.3",
+    "@angular/common": "^17.1.3",
+    "@angular/compiler": "^17.1.3",
+    "@angular/core": "^17.1.3",
+    "@angular/elements": "^17.1.3",
+    "@angular/forms": "^17.1.3",
+    "@angular/material": "^17.1.2",
+    "@angular/platform-browser": "^17.1.3",
+    "@angular/platform-browser-dynamic": "^17.1.3",
+    "@angular/router": "^17.1.3",
     "@iqb/responses": "^1.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@tiptap/core": "^2.1.10",
@@ -46,7 +46,7 @@
     "@tiptap/extension-list-item": "^2.1.10",
     "@tiptap/extension-ordered-list": "^2.1.10",
     "@tiptap/extension-paragraph": "^2.1.10",
-    "@tiptap/extension-strike": "~2.1.10",
+    "@tiptap/extension-strike": "^2.1.10",
     "@tiptap/extension-subscript": "^2.1.10",
     "@tiptap/extension-superscript": "^2.1.10",
     "@tiptap/extension-text": "^2.1.10",
@@ -54,9 +54,9 @@
     "@tiptap/extension-text-style": "^2.1.10",
     "@tiptap/extension-underline": "^2.1.10",
     "ngx-tiptap": "^9.0.2",
-    "ngx-build-plus": "^16.0.0",
+    "ngx-build-plus": "^17.0.0",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.4"
   },
   "dependencies": {
     "tslib": "^2.3.0"
