--- a/package.json
+++ b/package.json
@@ -16,34 +16,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/elements": "^16.2.3",
-    "@angular/forms": "^16.2.0",
+    "@angular/animations": "^17.3.0",
+    "@angular/common": "^17.3.0",
+    "@angular/compiler": "^17.3.0",
+    "@angular/core": "^17.3.0",
+    "@angular/elements": "^17.3.0",
+    "@angular/forms": "^17.3.0",
     "@angular/material": "^16.2.4",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
+    "@angular/platform-browser": "^17.3.0",
+    "@angular/platform-browser-dynamic": "^17.3.0",
+    "@angular/router": "^17.3.0",
     "@iqb/responses": "^1.0.0",
     "@ngx-translate/core": "^15.0.0",
     "ngx-build-plus": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.4"
   },
   "peerDependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/elements": "^16.2.3",
-    "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.4",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
     "@iqb/responses": "^1.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@tiptap/core": "^2.1.10",
@@ -72,13 +63,12 @@
     "@tiptap/extension-underline": "^2.1.10",
     "ngx-tiptap": "^9.0.2",
     "ngx-build-plus": "^17.0.0",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.13.0"
+    "rxjs": "~7.8.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.1",
-    "@angular/cli": "~16.2.1",
-    "@angular/compiler-cli": "^16.2.0",
+    "@angular-devkit/build-angular": "^17.3.0",
+    "@angular/cli": "~17.3.0",
+    "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~4.3.0",
     "iqb-dev-components": "^1.4.1",
     "jasmine-core": "~4.6.0",
@@ -87,8 +77,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3",
-    "ng-packagr": "^16.2.0",
+    "typescript": "~5.4.2",
+    "ng-packagr": "^17.3.0",
     "@types/node": "^20.4.4",
     "ts-node": "^10.9.1"
   }
