--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser": "^17.1.3",
     "@angular/platform-browser-dynamic": "^17.1.3",
     "@angular/router": "^17.1.3",
-    "@iqb/responses": "^1.0.0",
+    "@iqb/responses": "1.1.1",
     "@ngx-translate/core": "^15.0.0",
     "ngx-build-plus": "^17.0.0",
     "rxjs": "~7.8.0",
