--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/material": "^17.1.2",
     "@iqb/responses": "^1.0.0",
     "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@tiptap/core": "^2.1.10",
     "@tiptap/extension-blockquote": "^2.1.10",
     "@tiptap/extension-bold": "^2.1.10",
