--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 
 # Node
 /node_modules
+/projects/ngx-coding-components/node_modules
+/projects/ngx-coding-components/package-lock.json
 npm-debug.log
 yarn-error.log
 
