--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.4"
+    "zone.js": "~0.14.4",
+    "mathjs": "^12.4.2"
   },
   "peerDependencies": {
     "@angular/material": "^17.1.2",
