--- a/package.json
+++ b/package.json
@@ -30,13 +30,12 @@
     "ngx-build-plus": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.4"
     "zone.js": "~0.14.4",
     "mathjs": "^12.4.2"
   },
   "peerDependencies": {
     "@angular/material": "^17.1.2",
-    "@iqb/responses": "^2.1.0",
+    "@iqb/responses": "~2.1.2",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@tiptap/core": "^2.1.10",
