--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.4",
-    "@angular/cli": "~17.1.3",    "@angular/compiler-cli": "^17.1.3",
+    "@angular/cli": "~17.1.3",
+    "@angular/compiler-cli": "^17.1.3",
     "@types/jasmine": "~4.3.0",
     "iqb-dev-components": "^1.4.1",
     "jasmine-core": "~4.6.0",
