--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser": "^17.1.3",
     "@angular/platform-browser-dynamic": "^17.1.3",
     "@angular/router": "^17.1.3",
-    "@iqb/responses": "^2.1.0",
+    "@iqb/responses": "3.0.0",
     "@ngx-translate/core": "^15.0.0",
     "ngx-build-plus": "^17.0.0",
     "rxjs": "~7.8.0",
@@ -35,7 +35,7 @@
   },
   "peerDependencies": {
     "@angular/material": "^17.1.2",
-    "@iqb/responses": "~2.1.2",
+    "@iqb/responses": "3.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@tiptap/core": "^2.1.10",
@@ -70,6 +70,7 @@
     "@angular-devkit/build-angular": "^17.1.4",
     "@angular/cli": "~17.1.3",
     "@angular/compiler-cli": "^17.1.3",
+    "@iqb/eslint-config": "^2.2.0",
     "@types/jasmine": "~4.3.0",
     "iqb-dev-components": "^1.4.1",
     "jasmine-core": "~4.6.0",
@@ -82,5 +83,21 @@
     "ng-packagr": "^17.1.3",
     "@types/node": "^20.4.4",
     "ts-node": "^10.9.1"
+  },
+  "eslintConfig": {
+    "overrides": [
+      {
+        "files": [
+          "*.ts"
+        ],
+        "extends": "@iqb/eslint-config"
+      },
+      {
+        "files": [
+          "*.js"
+        ],
+        "extends": "@iqb/eslint-config/javascript"
+      }
+    ]
   }
 }
