--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "coding-components",
   "config": {
-    "schemer_version": "2.0.0-beta"
+    "schemer_version": "2.0.0"
   },
   "scripts": {
     "ng": "ng",
@@ -25,7 +25,7 @@
     "@angular/platform-browser": "^17.1.3",
     "@angular/platform-browser-dynamic": "^17.1.3",
     "@angular/router": "^17.1.3",
-    "@iqb/responses": "3.0.5",
+    "@iqb/responses": "3.0.6",
     "@ngx-translate/core": "^15.0.0",
     "ngx-build-plus": "^17.0.0",
     "rxjs": "~7.8.0",
@@ -35,7 +35,7 @@
   },
   "peerDependencies": {
     "@angular/material": "^17.1.2",
-    "@iqb/responses": "3.0.5",
+    "@iqb/responses": "3.0.6",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@tiptap/core": "^2.1.10",
