--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
     "npm_publish": "cd dist/ngx-coding-components && npm publish --access public"
   },
   "dependencies": {
-    "@angular/animations": "^18.2.13",
-    "@angular/cdk": "^18.2.13",
-    "@angular/common": "^18.2.13",
-    "@angular/compiler": "^18.2.13",
-    "@angular/core": "^18.2.13",
-    "@angular/elements": "^18.2.13",
-    "@angular/forms": "^18.2.13",
-    "@angular/material": "^18.2.13",
-    "@angular/platform-browser": "^18.2.13",
-    "@angular/platform-browser-dynamic": "^18.2.13",
-    "@angular/router": "^18.2.13",
+    "@angular/animations": "19.1.8",
+    "@angular/cdk": "^19.1.5",
+    "@angular/common": "^19.1.8",
+    "@angular/compiler": "^19.1.8",
+    "@angular/core": "^19.1.8",
+    "@angular/elements": "^19.1.8",
+    "@angular/forms": "^19.1.8",
+    "@angular/material": "^19.1.5",
+    "@angular/platform-browser": "^19.1.8",
+    "@angular/platform-browser-dynamic": "^19.1.8",
+    "@angular/router": "^19.1.8",
     "@iqb/responses": "^3.7.0",
     "@ngx-translate/core": "^15.0.0",
     "mathjs": "^12.4.2",
-    "ngx-build-plus": "^18.0.0",
+    "ngx-build-plus": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "peerDependencies": {
-    "@angular/material": "^18.2.14",
+    "@angular/material": "^19.1.5",
     "@iqb/responses": "^3.7.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
@@ -68,9 +68,10 @@
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.14",
-    "@angular/cli": "~18.2.3",
-    "@angular/compiler-cli": "^18.2.13",
+    "@angular-devkit/build-angular": "^19.1.8",
+    "@angular-devkit/core": "19.1.8",
+    "@angular/cli": "19.1.8",
+    "@angular/compiler-cli": "19.1.8",
     "@iqb/eslint-config": "^2.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^20.4.4",
@@ -81,9 +82,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^18.2.1",
+    "ng-packagr": "^19.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "~5.4.2"
+    "typescript": "5.7.3"
   },
   "eslintConfig": {
     "overrides": [
