--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "npm_publish": "cd dist/ngx-coding-components && npm publish --access public"
   },
   "dependencies": {
-    "@angular/animations": "19.1.8",
+    "@angular/animations": "^19.1.8",
     "@angular/cdk": "^19.1.5",
     "@angular/common": "^19.1.8",
     "@angular/compiler": "^19.1.8",
@@ -32,16 +32,12 @@
     "@iqbspecs/variable-info": "^1.3.0",
     "@ngx-translate/core": "^15.0.0",
     "mathjs": "^12.4.2",
-    "ngx-build-plus": "^18.0.0",
+    "ngx-build-plus": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "peerDependencies": {
-    "@angular/material": "^19.1.5",
-    "@iqb/responses": "^4.0.0",
-    "@ngx-translate/core": "^15.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
     "@tiptap/core": "^2.1.10",
     "@tiptap/extension-blockquote": "^2.1.10",
     "@tiptap/extension-bold": "^2.1.10",
@@ -66,15 +62,14 @@
     "@tiptap/extension-text-align": "^2.1.10",
     "@tiptap/extension-text-style": "^2.1.10",
     "@tiptap/extension-underline": "^2.1.10",
-    "ngx-build-plus": "^18.0.0",
     "ngx-tiptap": "^11.1.0",
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.8",
-    "@angular-devkit/core": "19.1.8",
-    "@angular/cli": "19.1.8",
-    "@angular/compiler-cli": "19.1.8",
+    "@angular-devkit/core": "^19.1.8",
+    "@angular/cli": "^19.1.8",
+    "@angular/compiler-cli": "^19.1.8",
     "@iqb/eslint-config": "^2.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^20.4.4",
