--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       "prefix": "lib",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "builder": "@angular/build:ng-packagr",
           "options": {
             "project": "projects/ngx-coding-components/ng-package.json"
           },
@@ -25,7 +25,7 @@
           "defaultConfiguration": "production"
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular/build:karma",
           "options": {
             "tsConfig": "projects/ngx-coding-components/tsconfig.spec.json",
             "polyfills": [
@@ -154,15 +154,16 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular/build:application",
           "options": {
             "allowedCommonJsDependencies": [
               "@iqb/responses",
               "@iqb/responses/coding-factory"
             ],
-            "outputPath": "dist/schemer",
+            "outputPath": {
+              "base": "dist/schemer"
+            },
             "index": "projects/schemer/src/index.html",
-            "main": "projects/schemer/src/main.ts",
             "tsConfig": "projects/schemer/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "polyfills": [
@@ -176,7 +177,8 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "projects/schemer/src/assets/customTheme.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "browser": "projects/schemer/src/main.ts"
           },
           "configurations": {
             "production": {
@@ -201,9 +203,7 @@
               "outputHashing": "all"
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
@@ -212,7 +212,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
               "buildTarget": "schemer:build:production"
@@ -224,13 +224,13 @@
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "builder": "@angular/build:extract-i18n",
           "options": {
             "buildTarget": "schemer:build"
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular/build:karma",
           "options": {
             "main": "projects/schemer/src/test.ts",
             "tsConfig": "projects/schemer/tsconfig.spec.json",
@@ -252,5 +252,31 @@
   },
   "cli": {
     "analytics": false
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "type": "component"
+    },
+    "@schematics/angular:directive": {
+      "type": "directive"
+    },
+    "@schematics/angular:service": {
+      "type": "service"
+    },
+    "@schematics/angular:guard": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:interceptor": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:module": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:pipe": {
+      "typeSeparator": "."
+    },
+    "@schematics/angular:resolver": {
+      "typeSeparator": "."
+    }
   }
 }
