--- a/package.json
+++ b/package.json
@@ -15,61 +15,61 @@
     "npm_publish": "cd dist/ngx-coding-components && npm publish --access public"
   },
   "dependencies": {
-    "@angular/animations": "^19.1.8",
-    "@angular/cdk": "^19.1.5",
-    "@angular/common": "^19.1.8",
-    "@angular/compiler": "^19.1.8",
-    "@angular/core": "^19.1.8",
-    "@angular/elements": "^19.1.8",
-    "@angular/forms": "^19.1.8",
-    "@angular/material": "^19.1.5",
-    "@angular/platform-browser": "^19.1.8",
-    "@angular/platform-browser-dynamic": "^19.1.8",
-    "@angular/router": "^19.1.8",
+    "@angular/animations": "^20.0.5",
+    "@angular/cdk": "^20.0.4",
+    "@angular/common": "^20.0.5",
+    "@angular/compiler": "^20.0.5",
+    "@angular/core": "^20.0.5",
+    "@angular/elements": "^20.0.5",
+    "@angular/forms": "^20.0.5",
+    "@angular/material": "^20.0.4",
+    "@angular/platform-browser": "^20.0.5",
+    "@angular/platform-browser-dynamic": "^20.0.5",
+    "@angular/router": "^20.0.5",
     "@iqb/responses": "^4.0.0",
     "@iqbspecs/coding-scheme": "^3.2.0",
     "@iqbspecs/response": "^1.4.0",
     "@iqbspecs/variable-info": "^1.3.0",
     "@ngx-translate/core": "^15.0.0",
     "mathjs": "^12.4.2",
-    "ngx-build-plus": "^19.0.0",
+    "ngx-build-plus": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "peerDependencies": {
-    "@tiptap/core": "^2.1.10",
-    "@tiptap/extension-blockquote": "^2.1.10",
-    "@tiptap/extension-bold": "^2.1.10",
-    "@tiptap/extension-bubble-menu": "^2.1.10",
-    "@tiptap/extension-bullet-list": "^2.1.10",
-    "@tiptap/extension-color": "^2.1.10",
-    "@tiptap/extension-document": "^2.1.10",
-    "@tiptap/extension-floating-menu": "^2.1.10",
-    "@tiptap/extension-font-family": "^2.1.10",
-    "@tiptap/extension-heading": "^2.1.10",
-    "@tiptap/extension-highlight": "^2.1.10",
-    "@tiptap/extension-history": "^2.1.10",
-    "@tiptap/extension-image": "^2.1.10",
-    "@tiptap/extension-italic": "^2.1.10",
-    "@tiptap/extension-list-item": "^2.1.10",
-    "@tiptap/extension-ordered-list": "^2.1.10",
-    "@tiptap/extension-paragraph": "^2.1.10",
-    "@tiptap/extension-strike": "^2.1.10",
-    "@tiptap/extension-subscript": "^2.1.10",
-    "@tiptap/extension-superscript": "^2.1.10",
-    "@tiptap/extension-text": "^2.1.10",
-    "@tiptap/extension-text-align": "^2.1.10",
-    "@tiptap/extension-text-style": "^2.1.10",
-    "@tiptap/extension-underline": "^2.1.10",
-    "ngx-tiptap": "^11.1.0",
+    "@tiptap/core": "^2.23.1",
+    "@tiptap/extension-blockquote": "^2.23.1",
+    "@tiptap/extension-bold": "^2.23.1",
+    "@tiptap/extension-bubble-menu": "^2.23.1",
+    "@tiptap/extension-bullet-list": "^2.23.1",
+    "@tiptap/extension-color": "^2.23.1",
+    "@tiptap/extension-document": "^2.23.1",
+    "@tiptap/extension-floating-menu": "^2.23.1",
+    "@tiptap/extension-font-family": "^2.23.1",
+    "@tiptap/extension-heading": "^2.23.1",
+    "@tiptap/extension-highlight": "^2.23.1",
+    "@tiptap/extension-history": "^2.23.1",
+    "@tiptap/extension-image": "^2.23.1",
+    "@tiptap/extension-italic": "^2.23.1",
+    "@tiptap/extension-list-item": "^2.23.1",
+    "@tiptap/extension-ordered-list": "^2.23.1",
+    "@tiptap/extension-paragraph": "^2.23.1",
+    "@tiptap/extension-strike": "^2.23.1",
+    "@tiptap/extension-subscript": "^2.23.1",
+    "@tiptap/extension-superscript": "^2.23.1",
+    "@tiptap/extension-text": "^2.23.1",
+    "@tiptap/extension-text-align": "^2.23.1",
+    "@tiptap/extension-text-style": "^2.23.1",
+    "@tiptap/extension-underline": "^2.23.1",
+    "ngx-tiptap": "^12.0.0",
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.8",
-    "@angular-devkit/core": "^19.1.8",
-    "@angular/cli": "^19.1.8",
-    "@angular/compiler-cli": "^19.1.8",
+    "@angular-devkit/core": "^20.0.4",
+    "@angular/build": "^20.0.4",
+    "@angular/cli": "^20.0.4",
+    "@angular/compiler-cli": "^20.0.5",
     "@iqb/eslint-config": "^2.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^20.4.4",
@@ -80,9 +80,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^19.2.0",
+    "ng-packagr": "^20.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "5.7.3"
+    "typescript": "5.8.3"
   },
   "eslintConfig": {
     "overrides": [
