Add comprehensive project configuration and tests
- Introduced `.eslintrc.cjs` with specific overrides for TypeScript and JavaScript.
- Added `ci.yml` for GitHub Actions to enable CI pipeline with linting and tests.
- Developed unit tests for `SchemerService`, `VeronaAPIService`, `VarCodingComponent`, and associated modules.
- Updated `karma.conf.js` and `angular.json` for testing configurations.
- Integrated `@ngx-translate` for internationalization in various components.
- Enhanced npm scripts for tests and coverage handling in `package.json`.
- Updated `package-lock.json` to reflect dependency changes.

--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
+            "karmaConfig": "projects/ngx-coding-components/karma.conf.js",
             "tsConfig": "projects/ngx-coding-components/tsconfig.spec.json",
             "polyfills": [
               "zone.js",
