--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
     "pack_sc": "node scripts/wrap_and_pack.js schemer $npm_package_config_schemer_version projects/schemer/src/html_wrapper/index.html",
     "buildAndPack_sc": "npm run build_sc && npm run pack_sc",
     "npm_publish": "cd dist/ngx-coding-components && npm publish --access public",
-    "lint": "eslint . --ext .ts,.js",
-    "lint:fix": "eslint . --ext .ts,.js --fix",
-    "validate:scheme": "node scripts/validate-coding-scheme.js"
+    "lint": "eslint -c .eslintrc.cjs . --ext .ts,.js --ignore-pattern '**/karma.conf.js'",
+    "lint:fix": "eslint -c .eslintrc.cjs . --ext .ts,.js --fix --ignore-pattern '**/karma.conf.js'",
+    "validate:scheme": "node scripts/validate-coding-scheme.js",
+    "test": "npm run test:cc && npm run test:schemer",
+    "test:watch": "npm run test:cc:watch",
+    "test:cc": "ng test ngx-coding-components --watch=false --browsers=ChromeHeadless",
+    "test:cc:watch": "ng test ngx-coding-components",
+    "test:cc:coverage": "ng test ngx-coding-components --watch=false --browsers=ChromeHeadless --code-coverage",
+    "test:schemer": "ng test schemer --watch=false --browsers=ChromeHeadless",
+    "test:schemer:watch": "ng test schemer",
+    "test:schemer:coverage": "ng test schemer --watch=false --browsers=ChromeHeadless --code-coverage",
+    "test:coverage": "npm run test:cc:coverage && npm run test:schemer:coverage"
   },
   "dependencies": {
     "@angular/animations": "^20.0.5",
@@ -30,7 +39,7 @@
     "@angular/platform-browser-dynamic": "^20.0.5",
     "@angular/router": "^20.0.5",
     "@iqb/responses": "^4.0.0",
-    "@iqbspecs/coding-scheme": "^3.3.0",
+    "@iqbspecs/coding-scheme": "^3.3.1",
     "@iqbspecs/response": "^1.4.0",
     "@iqbspecs/validate-json": "^0.4.0",
     "@iqbspecs/variable-info": "^1.3.0",
