--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "overrides": [
     {
-      "files": ["*.ts"],
+      "files": ["**/*.ts"],
       "extends": "@iqb/eslint-config"
     },
     {
