Add support for Angular custom elements in ngx-coding-components
- Registered multiple custom Angular elements with `registerNgxCodingComponentsElements`.
- Introduced a build configuration and serving script for custom elements.
- Added `CUSTOM_ELEMENTS_SCHEMA` to `AppComponent` for element compatibility.
- Updated dependencies (`@iqb/responses` to `4.0.1`) and adjusted `package-lock.json` accordingly.

--- a/angular.json
+++ b/angular.json
@@ -91,6 +91,10 @@
               ],
               "outputHashing": "all"
             },
+            "elements": {
+              "outputPath": "dist/coding-components-elements",
+              "outputHashing": "none"
+            },
             "development": {
               "buildOptimizer": false,
               "optimization": false,
