--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --project=coding-components",
+    "build:elements": "ng build --project coding-components -c elements",
+    "serve:elements": "npx http-server dist/coding-components-elements -p 8081",
     "buildxx": "ng run coding-components:build",
     "build_cc": "rm -rf dist/ngx-coding-components && ng build ngx-coding-components",
     "build": "npm run build_cc && npm run start",
@@ -38,7 +40,7 @@
     "@angular/platform-browser": "^20.0.5",
     "@angular/platform-browser-dynamic": "^20.0.5",
     "@angular/router": "^20.0.5",
-    "@iqb/responses": "^4.0.0",
+    "@iqb/responses": "^4.0.1",
     "@iqbspecs/coding-scheme": "^3.3.1",
     "@iqbspecs/response": "^1.4.0",
     "@iqbspecs/validate-json": "^0.4.0",
