Add unit tests for dialogs, components, and services
- Added comprehensive unit tests for various dialog components, including `EditProcessingDialogComponent`, `EditSourceParametersDialogComponent`, and `ResolveVarListDuplicatesDialogComponent`.
- Implemented tests for `RichTextEditorComponent`, covering text formatting, list operations, and special character insertion.
- Enhanced coverage for `GenerateCodingDialogComponent`, verifying numeric rule generation, multi-choice handling, and boolean-multi features.
- Extended `SchemerComponent` tests for variable list updates and orphan variable handling.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "pack_sc": "node scripts/wrap_and_pack.js schemer $npm_package_config_schemer_version projects/schemer/src/html_wrapper/index.html",
     "buildAndPack_sc": "npm run build_sc && npm run pack_sc",
     "npm_publish": "cd dist/ngx-coding-components && npm publish --access public",
-    "lint": "eslint -c .eslintrc.cjs . --ext .ts,.js --ignore-pattern '**/karma.conf.js'",
-    "lint:fix": "eslint -c .eslintrc.cjs . --ext .ts,.js --fix --ignore-pattern '**/karma.conf.js'",
+    "lint": "eslint -c .eslintrc.cjs src projects --ext .ts,.js --cache --ignore-pattern '**/karma.conf.js'",
+    "lint:fix": "eslint -c .eslintrc.cjs src projects --ext .ts,.js --fix --cache --ignore-pattern '**/karma.conf.js'",
     "validate:scheme": "node scripts/validate-coding-scheme.js",
     "test": "npm run test:cc && npm run test:schemer",
     "test:watch": "npm run test:cc:watch",
