Update Angular dependencies to v20, bump library version to 3.1.0, and add MatTableDataSource type annotation.

--- a/angular.json
+++ b/angular.json
@@ -63,6 +63,7 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
+            "preserveSymlinks": true,
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
@@ -81,7 +82,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumError": "3mb"
+                  "maximumError": "4mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -163,7 +164,8 @@
           "options": {
             "allowedCommonJsDependencies": [
               "@iqb/responses",
-              "@iqb/responses/coding-factory"
+              "@iqb/responses/coding-factory",
+              "@iqbspecs/coding-scheme"
             ],
             "outputPath": {
               "base": "dist/schemer"
