--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^20.0.4",
     "@angular-devkit/core": "^20.0.4",
     "@angular/build": "^20.0.4",
     "@angular/cli": "^20.0.4",
