--- a/projects/ngx-coding-components/package.json
+++ b/projects/ngx-coding-components/package.json
@@ -4,7 +4,7 @@
   "exports": {
     "./lib/ngx-coding-components.module": "./lib/ngx-coding-components.module.d.ts"
   },
-  "version": "3.0.0",
+  "version": "3.1.0",
   "author": "IQB - Institut zur Qualitätsentwicklung im Bildungswesen",
   "license": "MIT",
   "description": "Angular components for coding responses in assessments of IQB.",
@@ -63,6 +63,12 @@
     "prosemirror-state": "^1.3.4",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^20.0.4",
+    "@angular/compiler-cli": "^20.0.5",
+    "ng-packagr": "^20.0.1",
+    "typescript": "5.8.3"
   },
   "dependencies": {
     "tslib": "^2.3.0"
