Modify TypeScript test configuration.

--- a/projects/ngx-coding-components/tsconfig.spec.json
+++ b/projects/ngx-coding-components/tsconfig.spec.json
@@ -5,7 +5,12 @@
     "outDir": "../../out-tsc/spec",
     "types": [
       "jasmine"
-    ]
+    ],
+    "paths": {
+      "@angular/*": ["../../node_modules/@angular/*"],
+      "@ngx-translate/core": ["../../node_modules/@ngx-translate/core"],
+      "@ngx-translate/core/*": ["../../node_modules/@ngx-translate/core/*"]
+    }
   },
   "include": [
     "**/*.spec.ts",
