--- a/projects/ngx-coding-components/package.json
+++ b/projects/ngx-coding-components/package.json
@@ -61,8 +61,7 @@
     "ngx-tiptap": "^12.0.0",
     "ngx-build-plus": "^20.0.0",
     "prosemirror-state": "^1.3.4",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0"
+    "rxjs": "~7.8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^20.0.4",
